[tool.poetry]

name = "ccxw"
version = "0.2.34"
description = "Ccxw - CryptoCurrency eXchange Websocket Library"
authors = ["Ricardo Marcelo Alvarez <rmalvarezkai@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rmalvarezkai/ccxw"

[tool.poetry.dependencies]
python = "^3.13"
thread6 = "^0.2.0"
websocket-client = "^1.9.0"
websocket-server = "^0.6.4"
schema = "^0.7.8"
toml = "^0.10.2"
importlib = "^1.0.4"
humanize = "^4.14.0"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
pytest = "^9.0.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
