[project]

name = "ccxw"
version = "0.2.37"
description = "Ccxw - CryptoCurrency eXchange Websocket Library"
authors = [
    {name = "Ricardo Marcelo Alvarez",email = "rmalvarezkai@gmail.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rmalvarezkai/ccxw"
requires-python = ">=3.13,<=3.14"

dependencies = [
    "humanize>=4.15.0",
    "importlib>=1.0.4",
    "schema>=0.7.8",
    "thread6>=0.2.0",
    "toml>=0.10.2",
    "websocket-client>=1.9.0",
    "websocket-server>=0.6.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "plotly>=6.7.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
